# RealTimeSystemMetricsPlatform

./: .gitignore  PLAN.md  README.md  metrics-app.yaml
agent/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.bat  build.sh
agent/include/: agent_config.h  http_client.h  metrics_collector.h  structured_logger.h
agent/src/: agent_config.cpp  http_client.cpp  main.cpp  metrics_collector.cpp  structured_logger.cpp
agent/tests/: http_client_test.cpp  metrics_collector_test.cpp
backend/: Dockerfile  README.md  requirements.txt
backend/app/: declarations.py  main.py
backend/tests/: test_main.py
dashboard/: Dockerfile  README.md  requirements.txt
dashboard/app/: main.py  settings.py
dashboard/app/static/: index.html  login.html
scripts/: build-images-fast.ps1  build-images.ps1  info.txt  setup-k8s.ps1  shutdown-k8s.ps1  start-dummy-workloads.ps1  test-all.ps1
scripts/testing/: agent-test-runner.Dockerfile
